--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>axel le gusta el chocolate</h1>
     <p>axel verdulero loco</p>
     axel esta loco //cambio en la web
-<img src="locodetecnica/erizos-datos-curiosidades" alt="logoescuela">
+<img src="locodetecnica/erizos-datos-curiosidades-2.jpg" alt="logoescuela">
 </body>
 </html>
